# swagger-output.json
@@ -160,6 +160,35 @@
         "responses": { "200": { "description": "OK" } }
       }
     },
+    "/organization/{orgId}/members": {
+      "get": {
+        "description": "Get all active members of an organization",
+        "parameters": [
+          {
+            "name": "orgId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "schema": { "type": "integer", "example": 1 }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": { "type": "integer", "example": 10 }
+          }
+        ],
+        "responses": { "200": { "description": "OK" } }
+      }
+    },
     "/organization/{orgId}/invite": {
       "post": {
         "description": "",
@@ -263,6 +292,20 @@
             "in": "path",
             "required": true,
             "schema": { "type": "string" }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "type": "integer"
+            }
           },
           {
             "name": "authorization",
@@ -412,11 +455,25 @@
             "schema": { "type": "string" }
           },
           {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          { "name": "status", "in": "query", "schema": { "type": "string" } },
+          {
             "name": "authorization",
             "in": "header",
             "schema": { "type": "string" }
-          },
-          { "name": "status", "in": "query", "schema": { "type": "string" } }
+          }
         ],
         "responses": { "200": { "description": "OK" } }
       },
@@ -492,7 +549,7 @@
         "responses": { "200": { "description": "OK" } }
       },
       "patch": {
-        "description": "",
+        "description": "Update a task",
         "parameters": [
           {
             "name": "orgId",
